--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -9,8 +9,8 @@ main:
   - title: "Research"
     url: /teaching/    
     
-#   - title: "Portfolio"
-#     url: /portfolio/
+  - title: "Honors & Awards"
+    url: /portfolio/
         
 #   - title: "Blog Posts"
 #     url: /year-archive/
