--- a/_config.yml
+++ b/_config.yml
@@ -96,13 +96,13 @@ author:
   flickr           :
   facebook         :
   foursquare       :
-  github           : "https://github.com/ppromponas"
+  github           : "ppromponas"
   google_plus      :
   keybase          :
   instagram        :
   impactstory      : #"https://profiles.impactstory.org/u/xxxx-xxxx-xxxx-xxxx"
   lastfm           :
-  linkedin         : "https://www.linkedin.com/in/panagiotis-promponas-32935b171/"
+  linkedin         : "/panagiotis-promponas-32935b171/"
   orcid            : "http://orcid.org/yourorcidurl"
   pinterest        :
   soundcloud       :
