--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -6,8 +6,8 @@ main:
 #   - title: "Talks"
 #     url: /talks/    
 
-  - title: "Research"
-    url: /teaching/    
+#   - title: "Research"
+#     url: /teaching/    
     
   - title: "Honors & Awards"
     url: /portfolio/
