--- a/_config.yml
+++ b/_config.yml
@@ -81,7 +81,7 @@ analytics:
 # Site Author
 author:
   name             : "Panagiotis Promponas"
-  avatar           : "profile.png"
+  avatar           : "panos_picture_v1.jpg"
   bio              : "Ph.D. Student, Yale University"
   location         : "New Haven, CT, USA"
   employer         :
