--- a/_config.yml
+++ b/_config.yml
@@ -102,7 +102,7 @@ author:
   instagram        :
   impactstory      : #"https://profiles.impactstory.org/u/xxxx-xxxx-xxxx-xxxx"
   lastfm           :
-  linkedin         : "/panagiotis-promponas-32935b171/"
+  linkedin         : "https://www.linkedin.com/in/panagiotis-promponas/"
   orcid            : 
   pinterest        :
   soundcloud       :
